--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <td>Options</td>
                         <td>$<span id="optionsCost">0.00</span></td>
                       </tr>
-                      <tr>
+                      <tr id="under25SurchargeRow">
                         <td>Under 25 Surcharge</td>
                         <td>$<span id="under25surcharge">0.00</span></td>
                       </tr>
